<?xml version="1.0"?>
<package format="3">
  <name>gps_logger_py</name>
  <version>0.0.1</version>
  <description>Logs GPS coordinates when a servo is triggered using PX4 and ROS 2</description>

  <maintainer email="your@email.com">Your Name</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>px4_msgs</exec_depend>
  <exec_depend>setuptools</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
